fix(frontend): loading indicator on empty div too close to the top

--- a/frontend/src/styles/_animations.scss
+++ b/frontend/src/styles/_animations.scss
@@ -78,6 +78,7 @@
 .show-loading.htmx-request {
   position: relative;
   top: 0;
+  min-height: 100px;
 
   &::before {
     content: "";
